Adding support for gzipped input